--- a/docs/src/getting-started/index.mdx
+++ b/docs/src/getting-started/index.mdx
@@ -7,7 +7,7 @@ route: '/getting-started'
 
 In this tutorial you will learn how to create a MobX version of the default Flutter "counter" app.
 
-import finalImage from './end-result.png';
+import finalImage from 'end-result.png';
 
 <img
   src={finalImage}
