--- a/docs/src/getting-started/index.mdx
+++ b/docs/src/getting-started/index.mdx
@@ -10,9 +10,9 @@ In this tutorial you will learn how to create a MobX version of the default Flut
 import finalImage from './end-result.png';
 
 <img
-  src={finalImage}
+  src=end-result.png
   alt="End Result of the MobX-based Counter app"
-  width={300}
+  width=300
 />
 
 ## Prepare
