--- a/docs/src/getting-started/index.mdx
+++ b/docs/src/getting-started/index.mdx
@@ -204,7 +204,7 @@ You will notice above that we have not used any `StatefulWidget` instances! The 
 
 Our end result will look exactly the same as our start! As you tap on the `FloatingActionButton`, the counter will increment and update automatically.
 
-import endResult from './mobx-counter.gif';
+{import endResult from './mobx-counter.gif'};
 
 <img src={endResult} width={300} />
 
