--- a/docs/src/guides/when-does-mobx-react.mdx
+++ b/docs/src/guides/when-does-mobx-react.mdx
@@ -10,7 +10,7 @@ MobX is a reactive system that waits for an observable to change. Every observab
 
 import reactiveEquation from './reactive-equation.png';
 
-<img src={reactiveEquation} />
+<img src=./reactive-equation.png />
 
 This is the classic case of `Producer` **→** `Consumer` relationship. On one side is the observables, that notifies of changes and on the consumer side are reactions that _"react"_ to these changes. Without the **reactions**, MobX would be a a very quite place with zero activity (reactivity?).
 
